[package]
name = "grust-light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tokio = {version = "1.27.0", features = ["macros","rt","rt-multi-thread","sync","time"]}
reqwest = "0.11.6"
utoipa = {version= "3.2.1", features = ["axum_extras"]}
utoipa-swagger-ui = {version= "3.1.3", features = ["axum"]}
job_scheduler = "1.2.1"
redis = { version="0.23.0", features=["tokio-comp","serde"]}
